--- a/assets/css/pokemon-detail.css
+++ b/assets/css/pokemon-detail.css
@@ -132,18 +132,18 @@
     text-transform: capitalize;
 }
 
-/* PAREI AQUI 
 .pokemon img {
-    
-}*/
+    width: 70%;
+    margin: auto;
+    z-index: 10;
+    padding-top: 2.5rem;
+}
 
 .li-details {
     background: #fff;
-    /* height: calc(100vh - 417px); */
     border-radius: 25px 25px 0 0;
     padding: 0 1.5rem;
     font-size: .875rem;
-    bottom: 0;
 }
 
 .li-details .nav-list {
@@ -156,7 +156,7 @@
 
 .item  {
     color: #a8a8a8;
-    padding: 3rem 0.25rem 1rem 0.25rem;
+    padding: 2rem 0.25rem 1rem 0.25rem;
 }
 
 .item:hover {
